force-app/main/default/objects/RMS_Role_Permission__mdt/RMS_Role_Permission__mdt.object-meta.xml
<CustomObject>
    <label>RMS Role Permission</label>
    <pluralLabel>RMS Role Permissions</pluralLabel>
</CustomObject>