force-app/main/default/objects/RMS_Role_Permission__mdt/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <description>The entity name (VENDOR, CONTRACT, RATE, SURCHARGE, MARGIN_RULE)</description>
    <label>Entity</label>
    <type>Text</type>
    <length>50</length>
</CustomField>