force-app/main/default/objects/RMS_Role_Permission__mdt/fields/Permission_Set_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Mapping__c</fullName>
    <description>Comma-separated list of Permission Set names that map to this role (e.g., "RMS_PRICING_USER, RMS_PRICING_MANAGER")</description>
    <label>Permission Set Mapping</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>