force-app/main/default/objects/RMS_Role_Permission__mdt/fields/Permissions__c.field-meta.xml
<CustomField>
    <fullName>Permissions__c</fullName>
    <description>Comma-separated list of permissions (VIEW,CREATE,EDIT,DELETE,MARK_PREFERRED)</description>
    <label>Permissions</label>
    <type>Text</type>
    <length>255</length>
</CustomField>