force-app/main/default/objects/RMS_Role_Permission__mdt/fields/Profile_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Profile_Mapping__c</fullName>
    <description>Comma-separated list of Salesforce Profile names that map to this role (e.g., "RMS Pricing Manager, RMS Pricing User")</description>
    <label>Profile Mapping</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>