force-app/main/default/objects/RMS_Role_Permission__mdt/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>The role identifier (e.g., PRICING_USER, SALES_USER, ADMIN)</description>
    <label>Role</label>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>