force-app/main/default/objects/RMS_Role_Permission__mdt/fields/Viewable_Fields__c.field-meta.xml
<CustomField>
    <fullName>Viewable_Fields__c</fullName>
    <description>Comma-separated list of viewable field names (for field-level security). Leave empty to allow all fields except sensitive ones.</description>
    <label>Viewable Fields</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>